--- a/School.Web/Views/ChallanVoucher/Form.cshtml
+++ b/School.Web/Views/ChallanVoucher/Form.cshtml
@@ -107,13 +107,12 @@
     <div id="alertContainer"></div>
 
     <div class="card">
-        <div class="card-header d-flex justify-content-between align-items-center">
-            <h5><i class="bi bi-receipt me-2"></i>@(isEdit ? "Edit" : "Create") Fee Challan</h5>
-            <a href="/challan" class="btn btn-secondary">
-                <i class="bi bi-arrow-left me-1"></i> Back to List
-            </a>
-        </div>
         <div class="card-body">
+            <div class="d-flex justify-content-end mb-3">
+                <a href="/challan" class="btn btn-secondary">
+                    <i class="bi bi-arrow-left me-1"></i> Back to List
+                </a>
+            </div>
             <form id="challanForm">
                 <input type="hidden" id="challanId" value="@(challanId ?? 0)" />
 
