Set API_BASE URL in common.js

--- a/School.Web/Views/Exam/Index.cshtml
+++ b/School.Web/Views/Exam/Index.cshtml
@@ -341,7 +341,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let editingId = 0;
 
         $(document).ready(function () {
