--- a/School.Web/Views/Exam/MarksEntry.cshtml
+++ b/School.Web/Views/Exam/MarksEntry.cshtml
@@ -118,7 +118,7 @@
 
 @section Scripts {
 <script>
-    const API_BASE = 'http://localhost:5266/api';
+    //const API_BASE = 'http://localhost:5266/api';
     let students = [];
 
     $(document).ready(function () {
