--- a/School.Web/Views/Student/Form.cshtml
+++ b/School.Web/Views/Student/Form.cshtml
@@ -1047,7 +1047,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         const tabNames = ['Registration Info', 'Student Information', "Father's Information", "Mother's Information", "Guardian's Information", 'Address Information', 'Academic & Fee Info'];
         const tabs = ['registration', 'student', 'father', 'mother', 'guardian', 'address', 'academic'];
         let currentTabIndex = 0;
