--- a/School.Web/Views/Subjects/Index.cshtml
+++ b/School.Web/Views/Subjects/Index.cshtml
@@ -339,7 +339,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let editingSubjectId = 0;
 
         $(document).ready(function () {
