--- a/School.Web/Views/AcademicGrade/Index.cshtml
+++ b/School.Web/Views/AcademicGrade/Index.cshtml
@@ -316,10 +316,12 @@
         </div>
     </div>
 </div>
+<script src="~/js/common.js"></script>
 
 @section Scripts {
+    
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        
         let editingId = 0;
 
         $(document).ready(function () {
