--- a/School.Web/Views/Attendance/Index.cshtml
+++ b/School.Web/Views/Attendance/Index.cshtml
@@ -299,7 +299,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
 
         $(document).ready(function () {
             loadDropdowns();
