--- a/School.Web/Views/ChallanVoucher/Index.cshtml
+++ b/School.Web/Views/ChallanVoucher/Index.cshtml
@@ -296,7 +296,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let allChallans = [];
 
         $(document).ready(function () {
