--- a/School.Web/Views/Employee/Index.cshtml
+++ b/School.Web/Views/Employee/Index.cshtml
@@ -295,7 +295,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
 
         $(document).ready(function () {
             loadDropdowns();
