--- a/School.Web/Views/FeeVoucher/Index.cshtml
+++ b/School.Web/Views/FeeVoucher/Index.cshtml
@@ -307,7 +307,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let allVouchers = [];
 
         $(document).ready(function () {
