--- a/School.Web/Views/Roles/Index.cshtml
+++ b/School.Web/Views/Roles/Index.cshtml
@@ -482,7 +482,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let allMenus = [];
         let currentRoleData = null;
         let addRoleModal = null;
