--- a/School.Web/Views/SMS/Index.cshtml
+++ b/School.Web/Views/SMS/Index.cshtml
@@ -956,7 +956,7 @@
 
 @section Scripts {
 <script>
-    const API_BASE = 'http://localhost:5266/api';
+    //const API_BASE = 'http://localhost:5266/api';
 
     $(document).ready(function () {
         // Set default dates
