--- a/School.Web/Views/Salary/Index.cshtml
+++ b/School.Web/Views/Salary/Index.cshtml
@@ -309,7 +309,7 @@
 
 @section Scripts {
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let allSalaries = [];
 
         $(document).ready(function () {
