--- a/School.Web/Views/StaffSubjects/Index.cshtml
+++ b/School.Web/Views/StaffSubjects/Index.cshtml
@@ -104,7 +104,7 @@
 
 @section Scripts {
 <script>
-    const API_BASE = 'http://localhost:5266/api';
+    //const API_BASE = 'http://localhost:5266/api';
 
     // In-memory store for assignments
     let assignments = [];
