--- a/School.Web/Views/Users/Index.cshtml
+++ b/School.Web/Views/Users/Index.cshtml
@@ -405,7 +405,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <script>
-        const API_BASE = 'http://localhost:5266/api';
+        //const API_BASE = 'http://localhost:5266/api';
         let deleteUserId = null;
 
         $(document).ready(function () {
